test/spec_vectors/simd_bitwise/fail/module_24.wat
(module (func $v128.xor-arg-empty (result v128) (v128.xor)))